--- a/main.html
+++ b/main.html
@@ -4,10 +4,70 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+table {
+    width: 60%;
+    border-collapse: collapse; 
+    
+}
+
+th, td {
+    border: 1px solid #000; /* table lines */
+    padding: 8px;
+}
+
+.header th {
+    background-color: rgb(175, 67, 67);
+    color: white;
+}
+
+.data td {
+    background-color: #e8e4e4;
+}
+
+	</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead class="header">
+			<tr>
+				<th>Part</th>
+				<th>XS</th>
+				<th>S</th>
+				<th>M</th>
+				<th>L</th>
+				<th>XL</th>
+			</tr>
+		</thead>
+		<tbody class="data">
+			<tr>
+				<td>Waist</td>
+				<td>25</td>
+				<td>28</td>
+				<td>30</td>
+				<td>31</td>
+				<td>32</td>		
+			</tr>
+			<tr>
+				<td>Chest</td>
+				<td>34</td>
+				<td>34</td>
+				<td>38</td>
+				<td>40</td>
+				<td>41</td>		
+			</tr>
+			<tr>
+				<td>Sleeve</td>
+				<td>23</td>
+				<td>24</td>
+				<td>24</td>
+				<td>25</td>
+				<td>25</td>		
+			</tr>
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
